--- a/docker-stacks-foundation/Dockerfile
+++ b/docker-stacks-foundation/Dockerfile
@@ -7,7 +7,7 @@ ARG ROOT_CONTAINER=ubuntu:22.04
 
 FROM $ROOT_CONTAINER
 
-LABEL maintainer="Jupyter Project <jupyter@googlegroups.com>"
+LABEL maintainer="Damian Barsotti <damian.barsotti@unc.edu.ar>"
 ARG NB_USER="jovyan"
 ARG NB_UID="1000"
 ARG NB_GID="100"
